--- a/Chat18.03.2017/MainWindow.xaml
+++ b/Chat18.03.2017/MainWindow.xaml
@@ -6,18 +6,44 @@
         xmlns:local="clr-namespace:Chat18._03._2017"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-	<Grid Background="#FF33DADA">
-		<RichTextBox x:Name="Rtb" HorizontalAlignment="Left" Height="180" Margin="14,10,0,0" VerticalAlignment="Top" Width="492" Background="#FFEFF916">
-			<FlowDocument/>
-		</RichTextBox>
-		<Button x:Name="button" Content="Send" HorizontalAlignment="Left" Margin="422,219,0,0" VerticalAlignment="Top" Width="75" Click="button_Click" Height="35"/>
-		<RichTextBox x:Name="Rtbwriting" HorizontalAlignment="Left" Height="82" Margin="19,217,0,0" VerticalAlignment="Top" Width="389" Background="#FFDF74F7">
+	<Grid Background="#FFDDEAEA">
+		<RichTextBox x:Name="Rtb" HorizontalAlignment="Left" Height="180" Margin="18,21,0,0" VerticalAlignment="Top" Width="390">
+			<RichTextBox.Background>
+				<LinearGradientBrush EndPoint="0.5,1" MappingMode="RelativeToBoundingBox" StartPoint="0.5,0">
+					<GradientStop Color="Black" Offset="0.975"/>
+					<GradientStop Color="#FF56C536" Offset="0.753"/>
+				</LinearGradientBrush>
+			</RichTextBox.Background>
 			<FlowDocument>
-				<Paragraph>
-					<Run Text=""/>
-				</Paragraph>
+				<Paragraph/>
 			</FlowDocument>
 		</RichTextBox>
+		<Button x:Name="button" Content="Send" HorizontalAlignment="Left" Margin="422,219,0,0" VerticalAlignment="Top" Width="75" Click="button_Click" Height="35" FontSize="15" FontWeight="Bold" ForceCursor="True">
+			<Button.Background>
+				<LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+					<GradientStop Color="Black" Offset="0"/>
+					<GradientStop Color="#FFEEF72A" Offset="0.356"/>
+				</LinearGradientBrush>
+			</Button.Background>
+		</Button>
+		<RichTextBox x:Name="Rtbwriting" HorizontalAlignment="Left" Height="82" Margin="19,217,0,0" VerticalAlignment="Top" Width="389" FontSize="25">
+			<RichTextBox.Background>
+				<RadialGradientBrush>
+					<GradientStop Color="Black" Offset="0"/>
+					<GradientStop Color="#FFFF0079" Offset="0.172"/>
+				</RadialGradientBrush>
+			</RichTextBox.Background>
+			<FlowDocument>
+				<Paragraph/>
+			</FlowDocument>
+		</RichTextBox>
+		<ListView x:Name="listView" HorizontalAlignment="Left" Height="177" Margin="410,21,0,0" VerticalAlignment="Top" Width="100">
+			<ListView.View>
+				<GridView>
+					<GridViewColumn/>
+				</GridView>
+			</ListView.View>
+		</ListView>
 
 	</Grid>
 </Window>
